# geomatrix_lopare_investor

./: .gitignore  README.md  _briefing_phase0_3_skeleton.md  _patch_remove_contact.md  planungsdokument_1.md  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
app/: _access.py  _charts.py  _data.py  _i18n.py  _map_helpers.py  _theme.py  streamlit_app.py
app/pages/: 1_Project_Map.py  2_Opportunity.py  3_Dashboard.py  4_Contact.py  9_Disclaimer.py
content/: disclaimer_de.md  disclaimer_en.md  opportunity_de.md  opportunity_en.md
data/public/: _provenance.md  collars_categorized.parquet  concession_lopare.geojson  market_boron.csv  market_eu_context.json  market_lithium.csv  methodology.md
tests/: test_no_raw_grades.py
